# Mini_Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Renderer.cpp  Renderer.h  main.cpp
